feat:improve experience of configuring VertX with Java SDK